[package]
name = "impfrust"
version = "0.0.2"
authors = ["PeterUlb <peter@ulbrich.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.3"
dotenv = "0.15.0"
chrono = "0.4.19"
slog = "2.7.0"
slog-term = "2.8.0"
clap = "3.0.0-beta.2"